--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -22,7 +22,7 @@
                 {{ form_row(form._password) }}
                 <div>
                     <button type="submit" class="btn btn-yellow">Aanmelden</button>
-                    <span>Nog geen account? <a href="{{ path('user_register_region', {'regionId': regionId}) }}">Registreren je hier</a></span>
+                    <span>Nog geen account? <a href="{{ path('user_register') }}">Registreren je hier</a></span>
                 </div>
 
                 {{ form_end(form) }}
